--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "sugar-inflections": "^2.0.6",
     "sugar-language": "^2.0.6",
     "svelte": "^3.18.2",
-    "svelte-mui": "^0.3.3",
     "svelte-preprocess": "^3.1.2",
     "svelte-spa-router": "^2.0.0",
     "uuid": "^3.3.3"
@@ -48,6 +47,7 @@
     "js-cookie": "^2.2.1",
     "marked": "^0.8.0",
     "mathjs": "^6.6.0",
+    "quill": "^1.3.7",
     "sirv-cli": "^0.4.4"
   }
 }
